--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ h2 {
     text-align: center;
 }
 
+.the-changing {
+    text-align: center;
+}
+
 .flex-box-1 {
     width: 200px;
     height: 80px;
